arrangement, javadoc for test add test for exception branches